# GameEngine

./: .gitignore  CMakeLists.txt  build_and_execute.sh  cmake.sh  run.sh
assets/: triangle.cpp
assets/shaders/: fragment.shader  quad.frag  quad.vertex  vertex.shader
include/: CMakeLists.txt  EBO.cpp  VAO.cpp  VAO.h  layout.h  renderer.cpp  renderer.h  shaderClass.cpp  shaderClass.h  texture.cpp
shaders/: fragment.shader  vertex.shader
src/: main.cpp  test.cpp
src/options/: BumpAllocator.cpp  BumpAllocator.h  CMakeLists.txt  Window.cpp  Window.h  gl_renderer.cpp  gl_renderer.h  init.cpp  init.h  logger.h  triangle.cpp  triangle.h
src/options/Interfaces/: includes.h  shape.h
